Correcion del formulario