@@ -16,6 +16,7 @@ import java.time.YearMonth;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class MatriculaServicio {
@@ -227,23 +228,24 @@ public class MatriculaServicio {
         LocalDate today = LocalDate.now();
         int anioActual = today.getYear();
 
-        ProcesoEjecutado proceso = procesoEjecutadoRepositorio.findByProceso("MATRICULA_AUTOMATICA").orElse(new ProcesoEjecutado("MATRICULA_AUTOMATICA", null));
-
+        ProcesoEjecutado proceso = procesoEjecutadoRepositorio.findByProceso("MATRICULA_AUTOMATICA")
+                .orElse(new ProcesoEjecutado("MATRICULA_AUTOMATICA", null));
         YearMonth mesActual = YearMonth.from(today);
         if (proceso.getUltimaEjecucion() != null && YearMonth.from(proceso.getUltimaEjecucion()).equals(mesActual)) {
             log.info("El proceso MATRICULA_AUTOMATICA ya fue ejecutado este mes: {}", proceso.getUltimaEjecucion());
             return;
         }
 
-        List<Alumno> alumnosConInscripciones = alumnoRepositorio.findAll().stream().filter(alumno -> Boolean.TRUE.equals(alumno.getActivo()) && alumno.getInscripciones() != null && !alumno.getInscripciones().isEmpty()).toList();
-
+        // Obtener alumnos activos con inscripciones
+        List<Alumno> alumnosConInscripciones = alumnoRepositorio.findAll().stream()
+                .filter(alumno -> Boolean.TRUE.equals(alumno.getActivo()) &&
+                        alumno.getInscripciones() != null && !alumno.getInscripciones().isEmpty())
+                .collect(Collectors.toList());
         log.info("Total de alumnos con al menos una inscripción activa: {}", alumnosConInscripciones.size());
 
         for (Alumno alumno : alumnosConInscripciones) {
             log.info("Procesando alumno id: {} - {}", alumno.getId(), alumno.getNombre());
-
             Optional<Matricula> optMatricula = matriculaRepositorio.findByAlumnoIdAndAnio(alumno.getId(), anioActual);
-
             Matricula matricula;
             if (optMatricula.isPresent()) {
                 matricula = optMatricula.get();
@@ -257,20 +259,66 @@ public class MatriculaServicio {
                 log.info("Nueva matrícula creada para alumno id={}, matrícula id={}", alumno.getId(), matricula.getId());
             }
 
-            // Verificamos si ya hay un DetallePago asociado a la matrícula
-            boolean detalleExiste = detallePagoRepositorio.existsByMatriculaId(matricula.getId());
-
-            if (!detalleExiste) {
-                log.info("No existe DetallePago para la matrícula id={}. Se procederá a registrar uno.", matricula.getId());
-                registrarDetallePagoMatriculaAutomatica(matricula, null); // null porque no hay pago aún
+            // Si no existe DetallePago para la matrícula, se registra.
+            if (!detallePagoRepositorio.existsByMatriculaId(matricula.getId())) {
+                log.info("No existe DetallePago para la matrícula id={}. Se procede a registrarlo.", matricula.getId());
+                registrarDetallePagoMatriculaAutomatica(matricula);
             } else {
                 log.info("Ya existe un DetallePago asociado a la matrícula id={}", matricula.getId());
             }
         }
-
         proceso.setUltimaEjecucion(today);
         procesoEjecutadoRepositorio.save(proceso);
         log.info("Proceso MATRICULA_AUTOMATICA completado. Flag actualizado a {}", today);
+    }
+
+
+    @Transactional
+    protected void registrarDetallePagoMatriculaAutomatica(Matricula matricula) {
+        log.info("[registrarDetallePagoMatricula] Iniciando registro del DetallePago para matrícula id={}", matricula.getId());
+        Alumno alumno = matricula.getAlumno();
+        // Obtener o crear el mismo pago pendiente que se utiliza para mensualidades
+        Pago pagoAsociado = obtenerOPersistirPagoPendiente(alumno.getId());
+
+        DetallePago detalle = new DetallePago();
+        detalle.setMatricula(matricula);
+        detalle.setAlumno(alumno);
+
+        // Se asigna la descripción según el año actual.
+        int anio = LocalDate.now().getYear();
+        String descripcionConcepto = "MATRICULA " + anio;
+        detalle.setDescripcionConcepto(descripcionConcepto);
+        detalle.setTipo(TipoDetallePago.MATRICULA);
+        detalle.setFechaRegistro(LocalDate.now());
+
+        // Verificar duplicidad según la lógica de negocio.
+        if (verificarDetallePagoUnico(detalle)) {
+            log.info("DetallePago duplicado detectado para matrícula id={}. Cancelando creación.", matricula.getId());
+            return;
+        }
+        asignarConceptoDetallePago(detalle);
+
+        Double valorBase = detalle.getConcepto().getPrecio();
+        detalle.setValorBase(valorBase);
+        detalle.setImporteInicial(valorBase);
+        detalle.setImportePendiente(valorBase);
+        detalle.setACobrar(0.0);
+        detalle.setCobrado(false);
+        detalle.setPago(pagoAsociado);
+
+        detallePagoRepositorio.save(detalle);
+        log.info("[registrarDetallePagoMatricula] DetallePago para matrícula id={} creado y guardado exitosamente.", matricula.getId());
+
+        // Actualizar el pago consolidado acumulando el importe
+        if (pagoAsociado.getDetallePagos() == null) {
+            pagoAsociado.setDetallePagos(new ArrayList<>());
+        }
+        pagoAsociado.getDetallePagos().add(detalle);
+        pagoAsociado.setMonto((pagoAsociado.getMonto() == null ? 0.0 : pagoAsociado.getMonto()) + valorBase);
+        pagoAsociado.setSaldoRestante((pagoAsociado.getSaldoRestante() == null ? 0.0 : pagoAsociado.getSaldoRestante()) + valorBase);
+        pagoRepositorio.save(pagoAsociado);
+        log.info("[registrarDetallePagoMatricula] Pago (ID={}) actualizado: nuevo monto={} y saldo restante={}",
+                pagoAsociado.getId(), pagoAsociado.getMonto(), pagoAsociado.getSaldoRestante());
     }
 
     @Transactional
@@ -279,6 +327,29 @@ public class MatriculaServicio {
         Pago ultimo = pagoRepositorio.findTopByAlumnoIdAndEstadoPagoAndSaldoRestanteGreaterThanOrderByFechaDesc(alumnoId, EstadoPago.ACTIVO, 0.0).orElse(null);
         log.info("[obtenerUltimoPagoPendienteEntidad] Resultado para alumno id={}: {}", alumnoId, ultimo);
         return ultimo;
+    }
+
+    @Transactional
+    protected Pago obtenerOPersistirPagoPendiente(Long alumnoId) {
+        // Se utiliza la búsqueda de un pago "pendiente" según la lógica del repositorio.
+        Pago pagoExistente = obtenerUltimoPagoPendienteEntidad(alumnoId);
+        if (pagoExistente != null) {
+            log.info("Se encontró un pago pendiente para el alumno id={}: Pago id={}", alumnoId, pagoExistente.getId());
+            return pagoExistente;
+        }
+        Pago nuevoPago = new Pago();
+        Alumno alumno = alumnoRepositorio.findById(alumnoId)
+                .orElseThrow(() -> new RuntimeException("Alumno no encontrado para id=" + alumnoId));
+        nuevoPago.setAlumno(alumno);
+        nuevoPago.setFecha(LocalDate.now());
+        nuevoPago.setFechaVencimiento(LocalDate.now().plusDays(30));
+        nuevoPago.setImporteInicial(0.0);
+        nuevoPago.setMonto(0.0);
+        nuevoPago.setSaldoRestante(0.0);
+        nuevoPago.setEstadoPago(EstadoPago.ACTIVO);
+        pagoRepositorio.save(nuevoPago);
+        log.info("No se encontró un pago pendiente; se creó un nuevo pago con ID={}", nuevoPago.getId());
+        return nuevoPago;
     }
 
 }
